source of dataset
added the link in rmd.

--- a/index.rmd
+++ b/index.rmd
@@ -17,7 +17,7 @@ source("scripts/chart_three.R")
 # COVID-2019 Brief Data Analysis
 
 ## Introduction
-Our domain of interest is the impact of COVID-19 in the US. This spring, we have this unfortunate outbreak of virus that has threathen hundreds of thoudsands of lives int the U.S., and even more around the world. Our group hopes that, with our effort and analysis on multiple datasets about the COVID-19, we can arouse more viligance and help people to understand this disease better. The first dataset is a comprehensive one about each U.S county, which collects information related to their weather, socio/health and COVID-19 situation. Since its size exceeds the upload limit, we decided to keep it local. We also found a dataset about provisional COVID-19 Death Counts based on states, sex and ages that could help us understand the bigger picture. Finally, the dataset US State COVID-19 Daily collects number of daily cases in USA, and we have a helper dataset that stores the latitude and longitude values of states and country to assist our charts. 
+Our domain of interest is the impact of COVID-19 in the US. This spring, we have this unfortunate outbreak of virus that has threathen hundreds of thoudsands of lives int the U.S., and even more around the world. Our group hopes that, with our effort and analysis on multiple datasets about the COVID-19, we can arouse more viligance and help people to understand this disease better. The first [dataset](https://www.kaggle.com/johnjdavisiv/us-counties-covid19-weather-sociohealth-data) is a comprehensive one about each U.S county, which collects information related to their weather, socio/health and COVID-19 situation. Since its size exceeds the upload limit, we decided truncate it. We also found a second [dataset](https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Sex-Age-and-S/9bhg-hcku) about provisional COVID-19 Death Counts based on states, sex and ages that could help us understand the bigger picture. Finally, the dataset [US State COVID-19 Daily](https://www.kaggle.com/sudalairajkumar/covid19-in-usa?select=us_states_covid19_daily.csv) collects number of daily cases in USA, and we have a [helper dataset]() that stores the latitude and longitude values of states and country to assist our charts. 
 
 ## Summary Infomation
 ```{r, echo=FALSE, include=FALSE}
@@ -48,11 +48,14 @@ kable(df)
 ```
 
 ## Charts
+### First Chart
 Our first chart is a line chart that reflects the daily Covid-19 death rate from this January to mid-May. We include this chart becasue we would like to see how the trend of the death rate changes over time. According to the graph, the death rate spiked up at the end of February and kept increasing until the end of March. Then steadiley decreased for about a month before it came back up again, and now the trend have been relatively constant for about a month. 
 `r plot_one`
 
+### Second Chart
 Our second chart is a map that uses circle to locate each state, and shows the positive cases of COVID-19 with the size of the circle. We included this chart becasue we would appreciate a map that can shows the geometric location and visualize the postive cases number at the same time. From this map, we can tell that the Northeast ara suffers the most, and California has quite a few cases compared to other west states. According to common knowledge, we see that the more populated is the state, the more cases it has, which is also shown by the fact that the Midwest generally has fewer cases.  
 `r plot_two`
 
+### Third Chart
 Our third chart is a scatter plot that shows the percent of smoking population and Covid-19 death rate of each state in the U.S. We include this chart because we would like to see if there is an associate between smoking and covid-19 death, since smoking damages people's lungs, and the impact of covid-19 is primarily on lungs as well. According to our plot, there is no significant correlation between smoking proportion and covid-19 death rate. 
 `r plot_three`
