--- a/index.rmd
+++ b/index.rmd
@@ -17,7 +17,7 @@ source("scripts/chart_three.R")
 # COVID-2019 Brief Data Analysis
 
 ## Introduction
-Our domain of interest is the impact of COVID-19 in the US. This spring, we have this unfortunate outbreak of virus that has threathen hundreds of thoudsands of lives int the U.S., and even more around the world. Our group hopes that, with our effort and analysis on multiple datasets about the COVID-19, we can arouse more viligance and help people to understand this disease better. The first [dataset](https://www.kaggle.com/johnjdavisiv/us-counties-covid19-weather-sociohealth-data) is a comprehensive one about each U.S county, which collects information related to their weather, socio/health and COVID-19 situation. Since its size exceeds the upload limit, we decided truncate it. We also found a second [dataset](https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Sex-Age-and-S/9bhg-hcku) about provisional COVID-19 Death Counts based on states, sex and ages that could help us understand the bigger picture. Finally, the dataset [US State COVID-19 Daily](https://www.kaggle.com/sudalairajkumar/covid19-in-usa?select=us_states_covid19_daily.csv) collects number of daily cases in USA, and we have a [helper dataset]() that stores the latitude and longitude values of states and country to assist our charts. 
+Our domain of interest is the impact of COVID-19 in the US. This spring, we have this unfortunate outbreak of virus that has threathen hundreds of thoudsands of lives int the U.S., and even more around the world. Our group hopes that, with our effort and analysis on multiple datasets about the COVID-19, we can arouse more viligance and help people to understand this disease better. The first [dataset](https://www.kaggle.com/johnjdavisiv/us-counties-covid19-weather-sociohealth-data) is a comprehensive one about each U.S county, which collects information related to their weather, socio/health and COVID-19 situation. Since its size exceeds the upload limit, we decided truncate it. We also found a second [dataset](https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Sex-Age-and-S/9bhg-hcku) about provisional COVID-19 Death Counts based on states, sex and ages that could help us understand the bigger picture. Finally, the dataset [US State COVID-19 Daily](https://www.kaggle.com/sudalairajkumar/covid19-in-usa?select=us_states_covid19_daily.csv) collects number of daily cases in USA, and we have a [helper dataset](https://www.kaggle.com/paultimothymooney/latitude-and-longitude-for-every-country-and-state) that stores the latitude and longitude values of states and country to assist our charts. 
 
 ## Summary Infomation
 ```{r, echo=FALSE, include=FALSE}
